kelvin; the texts

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div id="sidebar-menu">
                     <!-- Left Menu Start -->
                     <ul class="metismenu list-unstyled text-capitalize" id="side-menu">
-                        <li class="menu-title" key="t-pages">NTSA Billing System</li>
+                        <li class="menu-title" key="t-pages">NTSA  Road Safety Intelligence Portal</li>
 
                         <li class="side-bar-button" >
                             <a href="bill-new.html" class="waves-effect btn btn-light btn-rounded text-left write-msg-btn">
@@ -383,7 +383,7 @@
                                                     <div class="text-muted">
                                                         <p class="mb-2 d-none">Daily Quick Stats for NTSA</p>
                                                         <h5 class="mb-1 today-date">22 Jul 2022</h5>
-                                                        <p class="mb-0 d-non pb-0"><small>Daily summary for NTSA Billing system for <strong>Today</strong></small></p>
+                                                        <p class="mb-0 d-non pb-0"><small>Daily summary for NTSA  Road Safety Intelligence Portal for <strong>Today</strong></small></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -846,7 +846,7 @@
                         </div>
                         <div class="col-sm-6 ">
                             <div class="text-sm-end d-sm-block ">
-                                NTSA Billing System
+                                NTSA  Road Safety Intelligence Portal
                             </div>
                         </div>
                     </div>
