--- a/permits-active.html
+++ b/permits-active.html
@@ -249,7 +249,7 @@
                 <div id="sidebar-menu">
                     <!-- Left Menu Start -->
                     <ul class="metismenu list-unstyled text-capitalize" id="side-menu">
-                        <li class="menu-title" key="t-pages">NTSA Billing System</li>
+                        <li class="menu-title" key="t-pages">NTSA  Road Safety Intelligence Portal</li>
 
                         <li class="side-bar-button" >
                             <a href="bill-new.html" class="waves-effect btn btn-light btn-rounded text-left write-msg-btn">
@@ -726,7 +726,7 @@
                         </div>
                         <div class="col-sm-6 ">
                             <div class="text-sm-end d-sm-block ">
-                                NTSA Billing System
+                                NTSA  Road Safety Intelligence Portal
                             </div>
                         </div>
                     </div>
