--- a/auth-lock-screen.html
+++ b/auth-lock-screen.html
@@ -49,7 +49,7 @@
 
 
                                                 <h4 class="mb-0"><i class="bx bxs-quote-alt-left text-success h1 align-middle me-3"></i>Keep Our Roads Safe</span></h4>
-                                                <p class="font-size-16 mb-0">NTSA Billing System</p>
+                                                <p class="font-size-16 mb-0">NTSA  Road Safety Intelligence Portal</p>
                                                 <strong>-</strong>
 
                                             </div>
@@ -109,7 +109,7 @@
                                     <p class="mb-0">©
                                         <script>
                                             document.write(new Date().getFullYear())
-                                        </script> NTSA <strong>Billing System</strong></p>
+                                        </script> NTSA <strong>Road Safety Intelligence Portal</strong></p>
                                 </div>
                             </div>
 
