--- a/auth-login.html
+++ b/auth-login.html
@@ -49,7 +49,7 @@
 
 
                                                 <h4 class="mb-0"><i class="bx bxs-quote-alt-left text-success h1 align-middle me-3"></i>Keep Our Roads Safe</span></h4>
-                                                <p class="font-size-16 mb-0">NTSA Billing System</p>
+                                                <p class="font-size-16 mb-0">NTSA  Road Safety Intelligence Portal</p>
                                                 <strong>-</strong>
 
                                             </div>
@@ -77,7 +77,7 @@
 
                                     <div>
                                         <h5 class="text-success">Welcome Back !</h5>
-                                        <p class="text-muted">Sign in to continue Using the <strong>NTSA Billing system. </strong>
+                                        <p class="text-muted">Sign in to continue Using the <strong>NTSA  Road Safety Intelligence Portal. </strong>
                                         </p>
                                     </div>
 
@@ -122,7 +122,7 @@
                                     <p class="mb-0">©
                                         <script>
                                             document.write(new Date().getFullYear())
-                                        </script> NTSA <strong>Billing System</strong></p>
+                                        </script> NTSA <strong>Road Safety Intelligence Portal</strong></p>
                                 </div>
                             </div>
 
