--- a/auth-recoverpw.html
+++ b/auth-recoverpw.html
@@ -50,7 +50,7 @@
 
 
                                                 <h4 class="mb-0"><i class="bx bxs-quote-alt-left text-success h1 align-middle me-3"></i>Keep Our Roads Safe</span></h4>
-                                                <p class="font-size-16 mb-0">NTSA Billing System</p>
+                                                <p class="font-size-16 mb-0">NTSA  Road Safety Intelligence Portal</p>
                                                 <strong>-</strong>
 
                                             </div>
@@ -78,7 +78,7 @@
 
                                     <div>
                                         <h5 class="text-success"> Reset Password</h5>
-                                        <p class="text-muted">Reset Your Password with <strong>The NTSA Billing System </strong>
+                                        <p class="text-muted">Reset Your Password with <strong>The NTSA  Road Safety Intelligence Portal </strong>
                                     </div>
 
                                     <div class="mt-4">
@@ -107,7 +107,7 @@
                                     <p class="mb-0">©
                                         <script>
                                             document.write(new Date().getFullYear())
-                                        </script> NTSA <strong>Billing System</strong></p>
+                                        </script> NTSA <strong>Road Safety Intelligence Portal</strong></p>
                                 </div>
                             </div>
 
