--- a/auth-register-2.html
+++ b/auth-register-2.html
@@ -175,7 +175,7 @@
                                     <p class="mb-0">©
                                         <script>
                                             document.write(new Date().getFullYear())
-                                        </script> NTSA <strong>Billing System</strong></p>
+                                        </script> NTSA <strong>Road Safety Intelligence Portal</strong></p>
                                 </div>
                             </div>
 
