--- a/invoice-new.html
+++ b/invoice-new.html
@@ -7,7 +7,7 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Hotline Transporters Sacco | Create an invoice</title>
+    <title>NTSA Road Safety Intelligence Portal | Create an invoice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Rental management system by Nouveta LTD" name="description" />
     <meta content="Kelvin Njuguna" name="author" />
