kelvin: the dashboard

--- a/cert-biz.html
+++ b/cert-biz.html
@@ -849,11 +849,11 @@
                         <div class="col-sm-6 ">
                             <script>
                                 document.write(new Date().getFullYear())
-                            </script> © RevenueSure
+                            </script> © National Transport and safety Authority
                         </div>
                         <div class="col-sm-6 ">
                             <div class="text-sm-end d-sm-block ">
-                                Developed by Nouveta LTD.
+                                Road Safety Intelligence Portal
                             </div>
                         </div>
                     </div>
