--- a/delivered.html
+++ b/delivered.html
@@ -1865,17 +1865,17 @@
 
 
 
-            <footer class="footer">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-6">
+            <footer class="footer ">
+                <div class="container-fluid ">
+                    <div class="row ">
+                        <div class="col-sm-6 ">
                             <script>
                                 document.write(new Date().getFullYear())
-                            </script> © Best Birdy
+                            </script> © National Transport and safety Authority
                         </div>
-                        <div class="col-sm-6">
-                            <div class="text-sm-end d-sm-block">
-                                Connecting you to your World
+                        <div class="col-sm-6 ">
+                            <div class="text-sm-end d-sm-block ">
+                                Road Safety Intelligence Portal
                             </div>
                         </div>
                     </div>
