--- a/bill-land.html
+++ b/bill-land.html
@@ -1051,11 +1051,11 @@
                         <div class="col-sm-6 ">
                             <script>
                                 document.write(new Date().getFullYear())
-                            </script> © RevenueSure
+                            </script> © National Transport and safety Authority
                         </div>
                         <div class="col-sm-6 ">
                             <div class="text-sm-end d-sm-block ">
-                                A product of Nouveta LTD
+                                Road Safety Intelligence Portal
                             </div>
                         </div>
                     </div>
