--- a/icons-boxicons.html
+++ b/icons-boxicons.html
@@ -4211,11 +4211,11 @@
                         <div class="col-sm-6 ">
                             <script>
                                 document.write(new Date().getFullYear())
-                            </script> © Best Birdy
+                            </script> © National Transport and safety Authority
                         </div>
                         <div class="col-sm-6 ">
                             <div class="text-sm-end d-sm-block ">
-                                NTSA  Road Safety Intelligence Portal
+                                Road Safety Intelligence Portal
                             </div>
                         </div>
                     </div>
