kelvin: violations history added

--- a/saccos.html
+++ b/saccos.html
@@ -373,7 +373,7 @@
                                 <div class="page-title-right">
                                     <ol class="breadcrumb m-0">
                                         <li class="breadcrumb-item"><a href="index.html">Dashboards</a></li>
-                                        <li class="breadcrumb-item"><a href="#">Saccos</a></li>
+                                        <li class="breadcrumb-item active">Saccos</li>
                                     </ol>
                                 </div>
 
@@ -887,7 +887,7 @@
                         </div>
                         <div class="col-sm-6 ">
                             <div class="text-sm-end d-sm-block ">
-                                Road Safety Intelligence Portal
+                                Developed by Nouveta LTD.
                             </div>
                         </div>
                     </div>
