kelvin: the graphs

--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                                     <small class="mb-3 text-muted">The last 12 Months</small>
 
                                     <div>
-                                        <div id="revenue-by-bank" class="apex-charts" dir="ltr"></div>
+                                        <div id="annual-sales" class="" dir="ltr"></div>
                                     </div>
                                 </div>
                             </div>
@@ -1069,7 +1069,7 @@
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
   <script src="assets/js/pages/revenue-by-time.js "></script>
-  <script src="assets/js/pages/revenue-collection-time.js"></script>
+  <script src="assets/js/pages/annial-perfomance.js"></script>
 
 
 
