kelvin: the index page

--- a/index.html
+++ b/index.html
@@ -647,39 +647,101 @@
                     <!-- quick stats -->
                     <div class="row">
                         <div class="col-xl-4 px-sm-30px">
-                            <div class="card  text-white member-wedges-card">
-                                <a href="blocked.html">
-                                    <div class="card-body">
-                                        <div class="d-flex flex-wrap align-items-start">
-                                            <h5 class="card-title mb-3 me-2">Value for unpaid Bills</h5>
-
-                                            <div class="dropdown ms-auto">
-                                                <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
-                                                    <i class="mdi mdi-dots-horizontal"></i>
-                                                </a>
-
-                                                <div class="dropdown-menu dropdown-menu-end">
-                                                    <a class="dropdown-item" href="#">Action</a>
-                                                    <a class="dropdown-item" href="#">Another action</a>
-                                                    <a class="dropdown-item" href="#">Something else here</a>
-                                                    <div class="dropdown-divider"></div>
-                                                    <a class="dropdown-item" href="#">Separated link</a>
+                            <div class="card  text-white member-wedges-card index-live-stats">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-12 mb-3">
+                                            <h6 class="text-white text-uppercase">Live Stats</h6>
+                                        </div>
+                                        <div class="col-sm-12 mb-3">
+                                            <div class="live-data-card">
+                                                <div class="">
+                                                    <div class="me-3">
+                                                        <img src="assets/images/index-icons/fast.svg" alt="">
+                                                    </div>
+                                                    <span class="avatar-title rounded-circle bg-warning font-size-16 d-none">
+                                                        <!-- <i class="mdi mdi-sticker-alert text-white"></i> -->
+                                                        <img src="assets/images/index-icons/offline.png" alt="">
+                                                    </span>
+                                                </div>
+                                                <div>
+                                                    <p class="text-muted mb-1">Overspeeding Vehicles</p>
+                                                    <h5 class="mb-0">2,900</h5>
                                                 </div>
                                             </div>
                                         </div>
 
-                                        <div class="d-flex flex-wrap">
-                                            <div>
-                                                <p class="text-muted mb-1">The total value of the unpaid Loans.</p>
-                                                <h4 class="mb-3 text-danger fw-bold">KES 10,512</h4>
-                                                <p class="text-danger mb-0"><span><i class="bx bx-receipt me-1"></i>22 Bills</span></p>
-                                            </div>
-                                            <div class="ms-auto align-self-end">
-                                                <i class="mdi mdi-cash-remove display-4 text-light"></i>
+                                        <div class="col-sm-12 mb-3">
+                                            <div class="live-data-card">
+                                                <div class="">
+                                                    <div class="me-3">
+                                                        <img src="assets/images/index-icons/racing.png" alt="">
+                                                    </div>
+                                                    <span class="avatar-title rounded-circle bg-warning font-size-16 d-none">
+                                                        <!-- <i class="mdi mdi-sticker-alert text-white"></i> -->
+                                                        <img src="assets/images/index-icons/offline.png" alt="">
+                                                    </span>
+                                                </div>
+                                                <div>
+                                                    <p class="text-muted mb-1">Free Wheeling</p>
+                                                    <h5 class="mb-0">945</h5>
+                                                </div>
                                             </div>
                                         </div>
+                                        <div class="col-sm-12 mb-3">
+                                            <div class="live-data-card">
+                                                <div class="">
+                                                    <div class="me-3">
+                                                        <img src="assets/images/index-icons/bill.png" alt="">
+                                                    </div>
+                                                    <span class="avatar-title rounded-circle bg-warning font-size-16 d-none">
+                                                        <!-- <i class="mdi mdi-sticker-alert text-white"></i> -->
+                                                        <img src="assets/images/index-icons/offline.png" alt="">
+                                                    </span>
+                                                </div>
+                                                <div>
+                                                    <p class="text-muted mb-1">Created Bills</p>
+                                                    <h5 class="mb-0">945</h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12 mb-3">
+                                            <div class="live-data-card">
+                                                <div class="">
+                                                    <div class="me-3">
+                                                        <img src="assets/images/index-icons/no-wifi.svg" alt="">
+                                                    </div>
+                                                    <span class="avatar-title rounded-circle bg-warning font-size-16 d-none">
+                                                        <!-- <i class="mdi mdi-sticker-alert text-white"></i> -->
+                                                        <img src="assets/images/index-icons/offline.png" alt="">
+                                                    </span>
+                                                </div>
+                                                <div>
+                                                    <p class="text-muted mb-1">Offline Officers</p>
+                                                    <h5 class="mb-0">945</h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-12 mb-3">
+                                            <div class="live-data-card">
+                                                <div class="">
+                                                    <div class="me-3">
+                                                        <img src="assets/images/index-icons/road.png" alt="">
+                                                    </div>
+                                                    <span class="avatar-title rounded-circle bg-warning font-size-16 d-none">
+                                                        <!-- <i class="mdi mdi-sticker-alert text-white"></i> -->
+                                                        <img src="assets/images/index-icons/offline.png" alt="">
+                                                    </span>
+                                                </div>
+                                                <div>
+                                                    <p class="text-muted mb-1">Vehicles on Transit</p>
+                                                    <h5 class="mb-0">945</h5>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        
                                     </div>
-                                </a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-xl-8 px-sm-30px text-capitalize">
@@ -795,6 +857,21 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="col-xl-12 px-sm-30px">
+                                    <div class="card">
+                                        <div class="card-header bg-white">
+                                            <h4 class="card-title mb-0">Revenue Collections Vs Violations commited</h4>
+                                            <small class="mb-3 text-muted d-none">The last 12 Months</small>
+                                        </div>
+                                        <div class="card-body">
+                                            <div>
+                                                <div id="annual-sales" class="high-chart-cont" dir="ltr"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+        
+                                </div>
                             </div>
                             <!-- end row -->
                         </div>
@@ -804,12 +881,13 @@
                     <div class="row d-non">
                         <div class="col-xl-6 px-sm-30px">
                             <div class="card">
+                                <div class="card-header bg-white">
+                                    <h4 class="card-title mb-0">Revenue Collections Vs Violations commited</h4>
+                                    <small class="mb-3 text-muted d-none">The last 12 Months</small>
+                                </div>
                                 <div class="card-body">
-                                    <h4 class="card-title mb-0">Bill Creation And Receipted Bills</h4>
-                                    <small class="mb-3 text-muted">The last 12 Months</small>
-
                                     <div>
-                                        <div id="annual-sales" class="" dir="ltr"></div>
+                                        <div id="annual-sales" class="high-chart-cont" dir="ltr"></div>
                                     </div>
                                 </div>
                             </div>
