kelvin: the county map

--- a/index.html
+++ b/index.html
@@ -903,20 +903,20 @@
                                     <div class="clearfix">
                                         <div class="float-end d-flex ">
                                             <div class="input-group input-group-sm mx-3">
-                                                <select class="form-select form-select-sm">
-                                                    <option value="JA" selected>Violations</option>
-                                                    <option value="DE">Collected Revenue</option>
-                                                   
+                                                <select class="form-select form-select-sm filter-by">
+                                                    <option value="Violations" selected>Violations</option>
+                                                    <option value="Revenue">Collected Revenue</option>
                                                 </select>
                                                 <label class="input-group-text">Filter By</label>
                                             </div>
 
                                             <div class="input-group input-group-sm">
-                                                <select class="form-select form-select-sm">
-                                                    <option value="JA" selected>Jan</option>
-                                                    <option value="DE">Dec</option>
-                                                    <option value="NO">Nov</option>
-                                                    <option value="OC">Oct</option>
+                                                <select class="form-select form-select-sm filter-by-month">
+                                                    <option value="May" selected>May 2023</option>
+                                                    <option value="Jan">Jan 2023</option>
+                                                    <option value="Dec">Dec 2022</option>
+                                                    <option value="Nov">Nov 2022</option>
+                                                    <option value="Oct">Oct 2022</option>
                                                 </select>
                                                 <label class="input-group-text">Month</label>
                                             </div>
