kelvin: the drivers html

--- a/bills-receipted.html
+++ b/bills-receipted.html
@@ -253,6 +253,12 @@
                         </li>
 
                         <li>
+                            <a href="driver.html" class="waves-effect">
+                                <i class="mdi mdi-ship-wheel"></i><span>Drivers</span>
+                            </a>
+                        </li>
+
+                        <li>
                             <a href="saccos.html" class="waves-effect">
                                 <i class="mdi mdi-car-multiple"></i><span>Registered Saccos</span>
                             </a>
