--- a/saccos.html
+++ b/saccos.html
@@ -893,7 +893,7 @@
                         </div>
                         <div class="col-sm-6 ">
                             <div class="text-sm-end d-sm-block ">
-                                Developed by Nouveta LTD.
+                                Developed by Trive.
                             </div>
                         </div>
                     </div>
