--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@
                         </li>
 
                         <li>
+                            <a href="schools.html" class="waves-effect">
+                                <i class="bx bxs-school"></i><span>Driving Schools</span>
+                            </a>
+                        </li>
+
+                        <li>
                             <a href="saccos.html" class="waves-effect">
                                 <i class="mdi mdi-car-multiple"></i><span>Registered Saccos</span>
                             </a>
