--- a/invoice.html
+++ b/invoice.html
@@ -235,7 +235,7 @@
         </header>
 
          <!-- ========== Left Sidebar Start ========== -->
-        <div class="vertical-menu">
+         <div class="vertical-menu">
             <div data-simplebar class="h-100">
                 <!--- Sidemenu -->
                 <div id="sidebar-menu">
@@ -257,6 +257,12 @@
                         <li>
                             <a href="driver.html" class="waves-effect">
                                 <i class="mdi mdi-ship-wheel"></i><span>Drivers</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="schools.html" class="waves-effect">
+                                <i class="bx bxs-school"></i><span>Driving Schools</span>
                             </a>
                         </li>
 
