--- a/schools.html
+++ b/schools.html
@@ -441,8 +441,8 @@
                                                     </td>
                                                     <td>
                                                         <div class="d-flex justify-content-end">
-                                                            <a href="saccos-details.html" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
-                                                            <div class="dropdown">
+                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
+                                                            <div class="dropdown d-none">
                                                                 <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                                                                     <i class="bx bx-dots-vertical-rounded"></i>
                                                                 </a>
@@ -470,10 +470,10 @@
                                                     <td class="text-right">
                                                         <span class="badge badge-soft-success text-uppercase">Active</span>
                                                     </td>
-                                                    <td>
+                                                     <td>
                                                         <div class="d-flex justify-content-end">
-                                                            <a href="saccos-details.html" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
-                                                            <div class="dropdown">
+                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
+                                                            <div class="dropdown d-none">
                                                                 <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                                                                     <i class="bx bx-dots-vertical-rounded"></i>
                                                                 </a>
@@ -501,10 +501,10 @@
                                                     <td class="text-right">
                                                         <span class="badge badge-soft-success text-uppercase">Active</span>
                                                     </td>
-                                                    <td>
+                                                     <td>
                                                         <div class="d-flex justify-content-end">
-                                                            <a href="saccos-details.html" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
-                                                            <div class="dropdown">
+                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
+                                                            <div class="dropdown d-none">
                                                                 <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                                                                     <i class="bx bx-dots-vertical-rounded"></i>
                                                                 </a>
@@ -532,10 +532,10 @@
                                                     <td class="text-right">
                                                         <span class="badge badge-soft-success text-uppercase">Active</span>
                                                     </td>
-                                                    <td>
+                                                     <td>
                                                         <div class="d-flex justify-content-end">
-                                                            <a href="saccos-details.html" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
-                                                            <div class="dropdown">
+                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
+                                                            <div class="dropdown d-none">
                                                                 <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                                                                     <i class="bx bx-dots-vertical-rounded"></i>
                                                                 </a>
