kelvin: the random numbers

--- a/index.html
+++ b/index.html
@@ -430,7 +430,9 @@
                                                                     </span>
                                                             </div>
                                                             <p class="text-muted mb-2">Violations Rate</p>
-                                                            <h5 class="mb-0">67%</h5>
+                                                            <h5 class="mb-0">
+                                                                <span class="per-rand-num">67</span>
+                                                                %</h5>
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-12 col-md-3 col-lg-3 mb-5 mb-md-0">
@@ -441,7 +443,7 @@
                                                                     </span>
                                                             </div>
                                                             <p class="text-muted mb-2">Instalations Percentage</p>
-                                                            <h5 class="mb-0">47%</h5>
+                                                            <h5 class="mb-0"><span class="per-rand-num">47</span>%</h5>
 
                                                         </div>
                                                     </div>
@@ -454,7 +456,7 @@
                                                                     </span>
                                                             </div>
                                                             <p class="text-muted mb-2">Repeat Violation Rate</p>
-                                                            <h5 class="mb-0">23%</h5>
+                                                            <h5 class="mb-0"><span class="per-rand-num">23</span>%</h5>
 
                                                         </div>
                                                     </div>
@@ -520,12 +522,12 @@
                                             <div>
                                                 <div class="form-group mb-0">
                                                     <label for="" class="d-none">Contact Group</label>
-                                                    <select class="form-select selectpicker form-select text-black p-0" data-live-search="true" title="Select a Specific Month" data-style="form-select btn border text-black">
-                                                        <option value="">Dec 2022</option>
-                                                        <option value="">Jan 2023</option>
-                                                        <option value="">Feb 2023</option>   
-                                                        <option value="">Mar 2023</option> 
-                                                        <option value="">April 2023</option> 
+                                                    <select class="form-select selectpicker form-select text-black p-0 select-cards-month" data-live-search="true" title="Select a Specific Month" data-style="form-select btn border text-black">
+                                                        <option value="dec 2022">Dec 2022</option>
+                                                        <option value="jan 2023">Jan 2023</option>
+                                                        <option value="feb 2023">Feb 2023</option>   
+                                                        <option value="mar 2023">Mar 2023</option> 
+                                                        <option value="qpr 2023">April 2023</option> 
                                                     </select>
                                                 </div>
                                             </div>
@@ -559,7 +561,7 @@
                                                             </div>
                                                            <div>
                                                                 <p class="text-muted mb-2">Intergrated Providers</p>
-                                                                <h5 class="mb-0">48 of 57</h5>
+                                                                <h5 class="mb-0"><span class="per-rand-num">48</span> of 57</h5>
                                                            </div>
                                                         </div>
                                                     </div>
@@ -573,7 +575,7 @@
                                                             </div>
                                                             <div>
                                                                 <p class="text-muted mb-2">Violations Rate</p>
-                                                                <h5 class="mb-0">67%</h5>
+                                                                <h5 class="mb-0"><span class="per-rand-num">67</span>%</h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -587,7 +589,7 @@
                                                             </div>
                                                             <div>
                                                                 <p class="text-muted mb-2">Instalation Rate</p>
-                                                                <h5 class="mb-0">47%</h5>
+                                                                <h5 class="mb-0"><span class="per-rand-num">47</span>%</h5>
                                                             </div>
 
                                                         </div>
@@ -603,7 +605,7 @@
                                                             </div>
                                                             <div>
                                                                 <p class="text-muted mb-2">Repeat Violation Rate</p>
-                                                                <h5 class="mb-0">23%</h5>
+                                                                <h5 class="mb-0"><span class="per-rand-num">32</span>%</h5>
                                                             </div>
 
                                                         </div>
@@ -619,7 +621,7 @@
                                                             </div>
                                                             <div>
                                                                 <p class="text-muted mb-2">Unistaled But Active</p>
-                                                                <h5 class="mb-0">23%</h5>
+                                                                <h5 class="mb-0"><span class="per-rand-num">23</span>%</h5>
                                                             </div>
 
                                                         </div>
@@ -638,7 +640,7 @@
                                                             </div>
                                                             <div>
                                                                 <p class="text-muted mb-2">Installed But Offline</p>
-                                                                <h5 class="mb-0">22%</h5>
+                                                                <h5 class="mb-0"><span class="per-rand-num">22</span>%</h5>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -804,7 +806,7 @@
                                                 </div>
                                             </div>
                                             <div class="text-muted mt-4">
-                                                <h4>KES 2,250 <i class="mdi mdi-chevron-up ms-1 text-success"></i></h4>
+                                                <h4>KES 2,250 <i class="bx bxs-up-arrow ms-1 text-success font-12px"></i></h4>
                                                 <div class="d-flex">
                                                     <span class="badge badge-soft-success font-size-12"> + 0.2% </span> <span class="ms-2 text-truncate">From previous period</span>
                                                 </div>
@@ -841,7 +843,7 @@
                                                 </div>
                                             </div>
                                             <div class="text-muted mt-4">
-                                                <h4 class="text-uppercase">kes 21,325<i class="mdi mdi-chevron-up ms-1 text-success"></i></h4>
+                                                <h4 class="text-uppercase">kes 21,325<i class="bx bxs-up-arrow ms-1 text-success font-12px"></i></h4>
                                                 <div class="d-flex">
                                                     <span class="badge badge-soft-success font-size-12"> + 0.2% </span> <span class="ms-2 text-truncate">From previous period</span>
                                                 </div>
@@ -878,7 +880,7 @@
                                                 </div>
                                             </div>
                                             <div class="text-muted mt-4">
-                                                <h4 class="text-uppercase">kes 321,300<i class="mdi mdi-chevron-up ms-1 text-success"></i></h4>
+                                                <h4 class="text-uppercase">kes 321,300<i class="bx bxs-up-arrow ms-1 text-success font-12px"></i></h4>
 
                                                 <div class="d-flex">
                                                     <span class="badge badge-soft-warning font-size-12"> 0% </span> <span class="ms-2 text-truncate">From previous period</span>
