kelvin: index page responsiveness

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body data-sidebar="dark">
+<body data-sidebar="dark" >
 
     <!-- Loader -->
     <div id="preloader">
@@ -890,7 +890,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-xl-12 px-sm-30px">
+                                <div class="col-xl-12">
                                     <div class="card">
                                         <div class="card-header bg-white">
                                             <h4 class="card-title mb-0">Revenue Collections Vs Violations commited</h4>
@@ -947,7 +947,7 @@
                             <!--end card-->
                         </div>
                         
-                        <div class="col-5">
+                        <div class="col-xl-5 col-sm-12 px-sm-30px">
                             <div class="row">
                                 <div class="col-12">
                                     <div class="card ">
