kelvin: the drop shadow

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                     <div class="row">
                         
                         <div class="col-lg-12 px-sm-30px">
-                            <div class="card quick-stats-cont">
+                            <div class="card quick-stats-cont custom-drop-shadow">
                                 <div class="card-body">
                                     <div class="row ">
 
@@ -661,7 +661,7 @@
                     <!-- quick stats -->
                     <div class="row">
                         <div class="col-xl-4 px-sm-30px">
-                            <div class="card  text-white member-wedges-card index-live-stats">
+                            <div class="card  text-white member-wedges-card index-live-stats custom-drop-shadow">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-12 mb-3">
