kelvin: speling mistake rectified

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                                                                     </span>
                                                             </div>
                                                             <div>
-                                                                <p class="text-muted mb-2">Unistaled But Active</p>
+                                                                <p class="text-muted mb-2">Instaled But Active</p>
                                                                 <h5 class="mb-0"><span class="per-rand-num">23</span>%</h5>
                                                             </div>
 
