--- a/icons-boxicons.html
+++ b/icons-boxicons.html
@@ -603,7 +603,7 @@
                     <!-- Left Menu Start -->
                     <ul class="metismenu list-unstyled text-capitalize" id="side-menu">
                         <li class="menu-title d-none" key="t-pages">Road Safety Intelligence Portal</li>
-                        <li class="side-bar-button d-none" >
+                        <li class="side-bar-button " >
                             <a href="bill-new.html" class="waves-effect btn btn-light btn-rounded text-left write-msg-btn">
                                 <i class=""><img src="assets/images/plus-icon.svg" alt=""></i>
                                 <span class="text-capitalize">Create A Bill</span>
